--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,8 @@
 @import "bootstrap/scss/bootstrap";
 @import "~font-awesome/scss/font-awesome";
+@import "~bootstrap4-toggle/css/bootstrap4-toggle.min";
+@import "~noty/lib/themes/mint.css";
+@import "~noty/lib/noty.css";
 
 @import 'now-ui-dashboard/variables';
 @import 'now-ui-dashboard/mixins';
@@ -45,3 +48,4 @@
     position: absolute;
     right: 3%;
 }
+
