--- a/resources/sass/now-ui-dashboard/_variables.scss
+++ b/resources/sass/now-ui-dashboard/_variables.scss
@@ -53,10 +53,10 @@ $primary-states-color:       lighten($primary-color, 6%) !default;
 $primary-color-opacity:      rgba(249, 99, 50, .3) !default;
 $primary-color-alert:        rgba(249, 99, 50, .8) !default;
 
-$success-color:              #18ce0f !default;
+$success-color:              #2ecc71 !default;
 $success-states-color:       lighten($success-color, 6%) !default;
 $success-color-opacity:      rgba(24, 206, 15, .3) !default;
-$success-color-alert:        rgba(24, 206, 15, .8) !default;
+$success-color-alert:        rgba(46, 204, 113, .8) !default;
 
 $info-color:                 #2CA8FF !default;
 $info-states-color:          lighten($info-color, 6%) !default;
