--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,4 @@
-@import "bootstrap/scss/bootstrap";
+@import "~bootstrap/scss/bootstrap";
 @import "~font-awesome/scss/font-awesome";
 @import "~bootstrap4-toggle/css/bootstrap4-toggle.min";
 @import "~noty/lib/themes/mint.css";
