--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -63,8 +63,8 @@
 
 .circle-progress strong {
     position: absolute;
-    top: 40%;
-    left: 50%;
+    top: 10%;
+    // left: 50%;
     width: 100%;
     text-align: center;
     line-height: 40px;
