--- a/resources/sass/_guest.scss
+++ b/resources/sass/_guest.scss
@@ -1,3 +1,10 @@
+
+.guest__title {
+    font-size: 3em;
+    line-height: 1.15;
+    margin-bottom: 30px;
+}
+
 .guest__body {
     background: linear-gradient(#0c2646, #3c99dc);
 }
