--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
-@import "~@fortawesome/fontawesome-free/scss/fontawesome";
-@import "~bootstrap4-toggle/css/bootstrap4-toggle.min";
+@import "~@fortawesome/fontawesome-free/css/all.min.css";
 @import "~noty/lib/themes/mint.css";
 @import "~noty/lib/noty.css";
 @import "~@yaireo/tagify/src/tagify";
