--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -92,6 +92,10 @@
     padding: 0 !important;
 }
 
+.group-buttons {
+    display: inline-block;
+}
+
 .tagify__tag:first-child {
     margin: 5px 0 5px 15px;
 }
